[gd_scene load_steps=14 format=2]

[ext_resource path="res://EdgeOfTheGalaxyRegular-OVEa6.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Game Over.gd" type="Script" id=2]
[ext_resource path="res://Alien_Green.png" type="Texture" id=3]
[ext_resource path="res://ship forwards.png" type="Texture" id=4]
[ext_resource path="res://gold.png" type="Texture" id=5]
[ext_resource path="res://explosion.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=7]
extra_spacing_char = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
extra_spacing_char = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
extra_spacing_char = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 50
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 75
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 33
font_data = ExtResource( 1 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.32549, 0.0313726, 0.00784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -63.5
margin_top = -300.0
margin_right = 63.5
margin_bottom = -148.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="VBoxContainer"]
margin_right = 127.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 7 )
text = "Restart"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 127.0
margin_bottom = 88.0
custom_constants/hseparation = 0
custom_fonts/font = SubResource( 1 )
text = "Main Menu"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 127.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 2 )
text = "Quit Game"

[node name="Logo" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -175.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Explosion" type="Sprite" parent="Logo"]
position = Vector2( 16.0412, 33 )
texture = ExtResource( 6 )

[node name="Gold" type="Sprite" parent="Logo"]
position = Vector2( 111.041, 18 )
texture = ExtResource( 5 )

[node name="AlienGreen" type="Sprite" parent="Logo"]
position = Vector2( -70.4814, 13.8413 )
rotation = -0.872665
scale = Vector2( 0.13, 0.13 )
texture = ExtResource( 3 )

[node name="ShipForwards" type="Sprite" parent="Logo"]
position = Vector2( 19.0412, 23 )
texture = ExtResource( 4 )

[node name="GameOver Text" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = 75.0
margin_right = 288.0
margin_bottom = 176.0
custom_colors/default_color = Color( 0.858824, 0.47451, 0.164706, 1 )
custom_fonts/bold_font = SubResource( 5 )
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center][b]Game Over![/b][/center]
[center]You Ran Out of Gold[/center]"
text = "Game Over!
You Ran Out of Gold"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_top = 43.0
margin_right = 751.0
margin_bottom = 125.0
custom_colors/font_color = Color( 0.054902, 1, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "SCORE: 0000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highscore" type="Label" parent="."]
margin_left = 2.0
margin_top = 125.0
margin_right = 751.0
margin_bottom = 179.0
custom_colors/font_color = Color( 1, 0, 0.913725, 1 )
custom_fonts/font = SubResource( 9 )
text = "HIGHSCORE: 0000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
